header z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,6 @@ a:hover {
 }
 
 header {
-  z-index: 600 !important;
   width: 100vw;
 }
 
@@ -576,6 +575,7 @@ header .fixed {
 }
 
 header nav {
+  z-index: 999 !important;
   padding: 32px;
   width: 100vw;
   display: -webkit-box;
